# django-clickthroughs

./: .coveragerc  Makefile  README.md  pyproject.toml  requirements.build.txt  requirements.txt
.github/workflows/: tests.yml
clickthroughs/: admin.py  apps.py  models.py  urls.py  views.py
clickthroughs/migrations/: 0001_initial.py  0002_clickthrough_hostname_clickthrough_session_id_and_more.py  0003_campaign_platform_campaignhostname_and_more.py  0004_remove_campaign_suppliers_campaign_parameters_and_more.py  0005_alter_campaign_end_date_alter_campaign_start_date.py
clickthroughs/templatetags/: click_tags.py
tests/: test_models.py  test_settings.py  test_templatetags.py  test_views.py  urls.py
